# transpiler-mate

./: .coverage  .gitignore  404.html  CHANGELOG.md  README.md  Taskfile.yaml  datacite.json  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yaml  package.yaml
api/latest/transpiler_mate/: index.html
api/latest/transpiler_mate/cli/: index.html
api/latest/transpiler_mate/codemeta/: index.html
api/latest/transpiler_mate/datacite/: index.html
api/latest/transpiler_mate/datacite/datacite_4_6_models/: index.html
api/latest/transpiler_mate/invenio/: index.html
api/latest/transpiler_mate/markdown/: index.html
api/latest/transpiler_mate/metadata/: index.html
api/latest/transpiler_mate/metadata/licenses/: index.html
api/latest/transpiler_mate/metadata/software_application_models/: index.html
api/latest/transpiler_mate/oci/: index.html
api/latest/transpiler_mate/oci/oci_annotations_models/: index.html
api/latest/transpiler_mate/ogc_record/: index.html
api/latest/transpiler_mate/ogcapi_records/: index.html
api/latest/transpiler_mate/ogcapi_records/ogcapi_records_models/: index.html
api/latest/transpiler_mate/ogcapi_records/sciencekeywords/: index.html
cli/bump-version/: index.html
cli/codemeta/: index.html
cli/datacite/: index.html
cli/invenio/: index.html
cli/markdown/: index.html
cli/oci_annotations/: index.html
cli/ogc_processes/: index.html
cli/ogc_record/: index.html
conventions/: index.html
docs/: conventions.md  index.md  metadata-generator.html
docs/cli/: codemeta.md  invenio.md  markdown.md  oci_annotations.md  ogc_processes.md  ogc_record.md  oras_annotations.md
docs/explanation/: index.md
docs/how-to-guides/: bundle-cwl.md  generate-oci-annotations.md  index.md  metadata-generator.html
docs/reference/: api.md  index.md
docs/reference/crosswalks/: index.md  oci-annotations.md  ogc-processes.md  ogc-record.md
docs/reference/schemas/: index.md  oci_annotations.md  software_application.md
docs/tutorials/: index.md
docs/xwalks/: invenio.md
explanation/: index.html
explanation/cwl-metadata-conventions/: index.html
how-to-guides/: index.html
how-to-guides/bump-version/: index.html
how-to-guides/bundle-cwl/: index.html
how-to-guides/generate-codemeta/: index.html
how-to-guides/generate-datacite/: index.html
how-to-guides/generate-markdown/: index.html
how-to-guides/generate-oci-annotations/: index.html
how-to-guides/generate-ogc-processes/: index.html
how-to-guides/generate-ogc-record/: index.html
how-to-guides/publish-to-invenio/: index.html
reference/: index.html
reference/api/: index.html
reference/crosswalks/: index.html
reference/crosswalks/codemeta/: index.html
reference/crosswalks/datacite/: index.html
reference/crosswalks/invenio/: index.html
reference/crosswalks/oci-annotations/: index.html
reference/crosswalks/ogc-processes/: index.html
reference/crosswalks/ogc-record/: index.html
reference/schemas/: index.html
reference/schemas/datacite_4_6/: index.html
reference/schemas/oci_annotations/: index.html
reference/schemas/ogcapi_records/: index.html
reference/schemas/software_application/: index.html
schemas/: oci_annotations.yaml  ogcapi_records.yaml  oras_annotations.yaml  software_application.yaml
schemas/datacite_4_6/: index.html
schemas/oci_annotations/: index.html
schemas/ogcapi_records/: index.html
schemas/software_application/: index.html
search/: search_index.json
src/transpiler_mate/: __about__.py  __init__.py  cli.py  codemeta.py  invenio.py
src/transpiler_mate/cli/: bump_version.py  bundle_cwl.py  cli.py  codemeta.py  common.py  datacite.py  invenio_publish.py  markdown.py  oci_annotations.py  ogcprocesses.py  ogcrecord.py
src/transpiler_mate/datacite/: __init__.py  datacite_4_6_models.py
src/transpiler_mate/markdown/: __init__.py
src/transpiler_mate/markdown/templates/: index.md  metadata.md  workflow.md
src/transpiler_mate/metadata/: __init__.py  licenses.py  software_application_models.py
src/transpiler_mate/oci/: __init__.py  oci_annotations_models.py
src/transpiler_mate/ogc_record/: __init__.py
src/transpiler_mate/ogcapi/processes/: __init__.py
src/transpiler_mate/ogcapi/records/: __init__.py  sciencekeywords.py
src/transpiler_mate/ogcapi_records/: __init__.py  ogcapi_records_models.py
src/transpiler_mate/oras/: __init__.py  oras_annotations_models.py
src/transpiler_mate/sciencekeywords/: __init__.py  sciencekeywords.csv
tests/: conftest.py  test_bundle_cwl.py  test_cli.py  test_codemeta.py  test_core_helpers.py  test_datacite.py  test_invenio.py  test_markdown.py  test_metadata_manager.py  test_ogcapi_records.py
tutorials/: index.html
xwalks/codemeta/: index.html
xwalks/datacite/: index.html
xwalks/invenio/: index.html
xwalks/oci_annotations/: index.html
xwalks/ogc_processes/: index.html
xwalks/ogc_record/: index.html
