[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transpiler-mate"
dynamic = ["version"]
description = 'Schema.org 2 metadata formats transpiler'

readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "info@terradue.com" },
  { name = "Simone Tripodi", email = "info@terradue.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic",
  "email-validator",
  "ruamel.yaml>=0.18.16",
  "yaml-ld",
  "click>=8.3.0",
  "loguru",
  "invenio-rest-api-client",
  "giturlparse",
  "semver",
  "Jinja2>=3.1.6",
  "cwl-loader"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Terradue/transpiler-mate#readme"
Issues = "https://github.com/Terradue/transpiler-mate/issues"
Source = "https://github.com/Terradue/transpiler-mate"

[project.scripts]
transpiler-mate = "transpiler_mate.cli:main"

[tool.hatch.version]
path = "src/transpiler_mate/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/transpiler_mate tests}"

[tool.coverage.run]
source_pkgs = ["transpiler_mate", "tests"]
branch = true
parallel = true
omit = [
  "src/transpiler_mate/__about__.py",
]

[tool.coverage.paths]
transpiler_mate = ["src/transpiler_mate", "*/transpiler_mate/src/transpiler_mate"]
tests = ["tests", "*/transpiler_mate/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
description = "Test environment"
skip-install = false
dependencies = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-q = "pytest -q"
test-cov = "pytest --cov=transpiler_mate"
test-show-setup = "pytest --setup-show"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.dev]
description = "Development environment"
dependencies = [
  "pytest>=8.0",
  "ruff",
]


[tool.hatch.envs.dev.scripts]
lint = "ruff format src tests"
check = "ruff check --fix src tests"
